--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             
             <!-- Баннер изображение -->
             <div class="image-banner">
-                <img src="banner.png" alt="Рекламный баннер" class="banner-image">
+                <img src="banner.png.png" alt="Рекламный баннер" class="banner-image">
             </div>
             
             <!-- Карточки -->
